Make RecyclerView items clickable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My ApplicationTracker</string>
+    <string name="cheering_phrase">%s</string>
 </resources>
